-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.10.0 Beta1
-
None
-
-
9122dfcb9 (dev), f4049dc2b (6.10)
We tried Qt 6.10.0-beta1 here on our CI and it throws this error on macOS host build für another iOS build.
configure -top-level -prefix /.../build/dist/qt-host -release -optimize-size -shared -no-widgets -no-openssl -no-zstd -no-opengl -no-qml-debug -opensource -confirm-license -nomake examples -nomake tests -no-mtdev -no-dbus -qt-zlib -qt-pcre -qt-harfbuzz -qt-libpng -qt-libjpeg -ccache -no-widgets -no-feature-printsupport -no-feature-private_tests -no-feature-sql -no-feature-xml -no-feature-hijricalendar -no-feature-islamiccivilcalendar -no-feature-jalalicalendar -no-feature-filesystemwatcher -no-feature-imageformat_bmp -no-feature-imageformat_ppm -no-feature-imageformat_xbm -no-feature-pdf -no-feature-textodfwriter -no-feature-undocommand -no-feature-undogroup -no-feature-undostack -no-feature-brotli -no-feature-dnslookup -no-feature-dtls -no-feature-localserver -no-feature-libresolv -no-feature-schannel -no-feature-sctp -no-feature-securetransport -no-feature-topleveldomain -no-feature-testlib_selfcover -no-feature-bluetooth -no-feature-quickcontrols2-imagine -no-feature-quickcontrols2-material -no-feature-quickcontrols2-universal -no-feature-quickcontrols2-fusion -no-feature-qeventtransition -no-feature-scxml -no-feature-statemachine-qml -no-feature-assistant -no-feature-designer -skip qtactiveqt,qtlanguageserver -submodules qtbase,qtdeclarative,qtshadertools,qttools -- -DBUILD_qtbase=ON -DBUILD_qtdeclarative=ON -DBUILD_qtshadertools=ON -DBUILD_qttools=ON -DCMAKE_PREFIX_PATH=/.../dist/qt-host
In file included from /.../src/qt-host/qtbase/src/plugins/platforms/cocoa/qcocoainputcontext.mm:9: /.../src/qt-host/qtbase/src/plugins/platforms/cocoa/qcocoawindow.h:276:34: error: implicit instantiation of undefined template 'QHash<unsigned long long, QCocoaWindow::BorderRange>' 276 | QHash<quintptr, BorderRange> m_contentBorderAreas; // identifier -> uppper/lower | ^ /.../src/qt-host/qtbase/src/corelib/tools/qcontainerfwd.h:22:43: note: template is declared here 22 | template <typename Key, typename T> class QHash; | ^ In file included from /.../src/qt-host/qtbase/src/plugins/platforms/cocoa/qcocoainputcontext.mm:9: /.../src/qt-host/qtbase/src/plugins/platforms/cocoa/qcocoawindow.h:277:27: error: implicit instantiation of undefined template 'QHash<unsigned long long, bool>' 277 | QHash<quintptr, bool> m_enabledContentBorderAreas; // identifier -> enabled state (true/false) | ^ /.../src/qt-host/qtbase/src/corelib/tools/qcontainerfwd.h:22:43: note: template is declared here 22 | template <typename Key, typename T> class QHash; | ^ 2 errors generated.
/.../src/qt-host/qtbase/src/plugins/platforms/cocoa/qcocoamenubar.mm:60:13: error: cannot initialize object parameter of type 'const QPlatformWindow' with an expression of type 'QCocoaWindow' 60 | if (m_window->window()->isActive()) | ^~~~~~~~~~ /.../src/qt-host/qtbase/src/plugins/platforms/cocoa/qcocoamenubar.mm:241:23: error: cannot initialize object parameter of type 'const QPlatformWindow' with an expression of type 'QCocoaWindow' 241 | return m_window ? m_window->window() : nullptr; | ^~~~~~~~~~ /.../src/qt-host/qtbase/src/plugins/platforms/cocoa/qcocoamenubar.mm:269:25: error: cannot initialize object parameter of type 'const QPlatformWindow' with an expression of type 'QCocoaWindow' 269 | QWindow *win = cw ? cw->window() : nullptr; | ^~ /.../src/qt-host/qtbase/src/plugins/platforms/cocoa/qcocoamenubar.mm:398:20: error: cannot initialize object parameter of type 'const QPlatformWindow' with an expression of type 'QCocoaWindow' 398 | if (active && (active->window()->modality() == Qt::NonModal)) | ^~~~~~
| For Gerrit Dashboard: QTBUG-137822 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 654199,2 | macOS: Fix -no-opengl build due to missing QHash include | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 654247,2 | macOS: Fix -no-opengl build due to missing QHash include | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |