macOS: Fix -no-opengl build due to missing QHash include

Fallout from 6f67925799407216b999709d86ac180c1106fa9e.

Fixes: QTBUG-137822
Change-Id: I3a813d490d10fb8d520a2ed77aec6daff7b67e49
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>
(cherry picked from commit 9122dfcb97749d0eb3dd109f21e405c0c9d286f0)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>